--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -24,10 +24,22 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.0.18",
+    "@nomicfoundation/hardhat-chai-matchers": "^2.0.0",
+    "@nomicfoundation/hardhat-ethers": "^3.0.0",
+    "@nomicfoundation/hardhat-ignition": "^0.15.5",
+    "@nomicfoundation/hardhat-ignition-ethers": "^0.15.0",
+    "@nomicfoundation/hardhat-network-helpers": "^1.0.0",
+    "@nomicfoundation/ignition-core": "^0.15.5",
     "@tanstack/react-query": "^5.29.0",
+    "@typechain/ethers-v6": "^0.5.0",
+    "@typechain/hardhat": "^9.0.0",
+    "@types/chai": "^4.2.0",
+    "@types/mocha": ">=9.1.0",
     "@web3modal/siwe": "^5.0.3",
     "@web3modal/wagmi": "^5.0.3",
     "dayjs": "^1.11.10",
+    "ethers": "^6.4.0",
+    "hardhat-gas-reporter": "^1.0.8",
     "iron-session": "^6.3.1",
     "next": "^14.1.4",
     "react": "^18.2.0",
@@ -35,6 +47,9 @@
     "react-icons": "^4.11.0",
     "react-toastify": "^10.0.5",
     "siwe": "^2.3.2",
+    "solidity-coverage": "^0.8.1",
+    "ts-node": ">=8.0.0",
+    "typechain": "^8.3.0",
     "viem": "^2.16.3",
     "wagmi": "^2.10.8"
   },
