--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -42,6 +42,7 @@
     "hardhat-gas-reporter": "^1.0.8",
     "iron-session": "^6.3.1",
     "next": "^14.1.4",
+    "nexth": "git+https://github.com/ara-foundation/maydone.git",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
