--- a/package.json
+++ b/package.json
@@ -1,14 +1,68 @@
 {
-  "name": "nexth",
+  "name": "app",
   "version": "0.2.0",
   "license": "MIT",
-  "private": true,
-  "workspaces": [
-    "packages/*"
-  ],
   "scripts": {
-    "dev": "yarn workspaces -pt run dev",
-    "build": "yarn workspaces -pt run build",
-    "test": "yarn workspaces -pt run test"
+    "dev": "next dev -p 8000",
+    "build": "next build",
+    "test": "echo \"Error: no tests specified\"",
+    "start": "next start",
+    "lint": "next lint --fix",
+    "prettier": "prettier './src' --write",
+    "wagmi": "wagmi generate"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "./src": [
+      "lint",
+      "prettier"
+    ]
+  },
+  "dependencies": {
+    "@heroicons/react": "^2.0.18",
+    "@tanstack/react-query": "^5.29.0",
+    "@typechain/ethers-v6": "^0.5.0",
+    "@types/chai": "^4.2.0",
+    "@types/mocha": ">=9.1.0",
+    "@web3modal/siwe": "^5.0.3",
+    "@web3modal/wagmi": "^5.0.3",
+    "dayjs": "^1.11.10",
+    "ethers": "^6.4.0",
+    "iron-session": "^6.3.1",
+    "next": "^14.1.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.11.0",
+    "react-toastify": "^10.0.5",
+    "siwe": "^2.3.2",
+    "ts-node": ">=8.0.0",
+    "typechain": "^8.3.0",
+    "viem": "^2.16.3",
+    "wagmi": "^2.10.8"
+  },
+  "devDependencies": {
+    "@headlessui/react": "^2.1.2",
+    "@tailwindcss/typography": "^0.5.10",
+    "@tsconfig/next": "^2.0.0",
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "@wagmi/cli": "^2.0.4",
+    "autoprefixer": "^10",
+    "daisyui": "^4.12.10",
+    "eslint": "^8",
+    "eslint-config-next": "^14.1.4",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "husky": "^9.0.11",
+    "lint-staged": "^15.2.2",
+    "postcss": "^8",
+    "prettier": "^3.0.3",
+    "tailwindcss": "^3.4.4",
+    "typescript": "^5"
   }
 }
